--- a/shops/src/app/page-common/component/header/header.component.html
+++ b/shops/src/app/page-common/component/header/header.component.html
@@ -7,23 +7,23 @@
         <div class="menu-wrapper">
           <!-- Logo -->
           <div class="logo">
-            <a [routerLink]="['home']"><img src="../../../../assets/assets/img/logo/logo.png" alt=""></a>
+            <a href="home"><img src="../../../../assets/assets/img/logo/logo.png" alt=""></a>
           </div>
           <!-- Main-menu -->
           <div class="main-menu d-none d-lg-block">
             <nav>
               <ul id="navigation">
-                <li><a [routerLink]="['home']">Home</a></li>
-                <li class="hot"><a [routerLink]="['list']">Shop</a>
+                <li><a href="home" style="font-size: 20px">Home</a></li>
+                <li class="hot"><a href="list" style="font-size: 20px">Shop</a>
                 </li>
-                <li><a [routerLink]="['contact']">Contact</a></li>
-                <li><a href="blog.html">Blog</a>
+                <li><a href="contact" style="font-size: 20px">Contact</a></li>
+                <li><a href="#" style="font-size: 20px">Blog</a>
                   <ul class="submenu">
-                    <li><a href="blog.html">Blog</a></li>
-                    <li><a href="blog-details.html">Blog Details</a></li>
+                    <li><a href="blog" >Blog</a></li>
+                    <li><a href="blog-detail" >Blog Details</a></li>
                   </ul>
                 </li>
-                <li><a href="about.html">Support</a></li>
+                <li><a href="support" style="font-size: 20px">Support</a></li>
               </ul>
             </nav>
           </div>
@@ -31,13 +31,29 @@
           <div class="header-right">
             <ul>
               <li>
-                <div class="nav-search search-switch">
-                  <input class="rounded-0" type="text">
-                  <span class="flaticon-search"></span>
-                </div>
+                  <!--              <form action="#">-->
+                  <div class="form-group">
+                    <div class="input-group mb-3">
+                      <input type="text" class="form-control" placeholder='Search Keyword'>
+                      <div class="input-group-append">
+                        <button class="btn btn-danger" type="button"><i class="ti-search font-weight-bold" style="color: white"></i></button>
+                      </div>
+                    </div>
+                  </div>
+                  <!--              </form>-->
               </li>
-              <li> <a [routerLink]="['login']"><span class="flaticon-user"></span></a></li>
-              <li><a href="cart.html"><span class="flaticon-shopping-cart"></span></a> </li>
+              <li> <a href="login" *ngIf="isLoggedIn == false; else block"><span class="flaticon-user mr-2"> Login</span></a></li>
+              <ng-template #block class="d-flex">
+                <div class="header__top__right__auth ml-2">
+                  <label class="font-italic">Welcome !</label><span class=" text-dark font-weight-bold">{{user.fullName}}
+                  <a role="button" (click)="logout()">&nbsp;&nbsp;&nbsp;<i class="fas fa-sign-out-alt " style="font-size: 17px"></i></a>
+                </span>
+                </div>
+                <div class="header__top__right__auth">
+
+                </div>
+              </ng-template>
+              <li><a href="cart"><span class="flaticon-shopping-cart text-danger font-weight-bold" style="font-size: 18px"></span></a> </li>
             </ul>
           </div>
         </div>
