--- a/shops/src/app/page-common/component/login/login.component.html
+++ b/shops/src/app/page-common/component/login/login.component.html
@@ -16,7 +16,7 @@
   </div>
   <!-- Hero Area End-->
   <!--================login_part Area =================-->
-  <section class="login_part section_padding ">
+  <section class="login_part section_padding m-3 p-5">
     <div class="container">
       <div class="row align-items-center">
         <div class="col-lg-6 col-md-6">
@@ -34,21 +34,23 @@
             <div class="login_part_form_iner">
               <h3>Welcome Back ! <br>
                 Please Sign in now</h3>
-              <form class="row contact_form" action="#" method="post" novalidate="novalidate">
+              <form class="row contact_form" [formGroup]="loginForm" method="post" novalidate="novalidate" >
                 <div class="col-md-12 form-group p_star">
-                  <input type="text" class="form-control" id="name" name="name" value=""
+                  <i class="fas fa-user" style="color: #606060"></i>
+                  <input type="text" class=" form-control" formControlName="username"  id="name" name="name" value=""
                          placeholder="Username">
                 </div>
                 <div class="col-md-12 form-group p_star">
+                  <i class="fas fa-lock" style="color: #5f5f5f"></i>
                   <input type="password" class="form-control" id="password" name="password" value=""
-                         placeholder="Password">
+                         placeholder="Password" formControlName="password">
                 </div>
                 <div class="col-md-12 form-group">
                   <div class="creat_account d-flex align-items-center">
                     <input type="checkbox" id="f-option" name="selector">
                     <label for="f-option">Remember me</label>
                   </div>
-                  <button type="submit" value="submit" class="btn_3">
+                  <button type="submit" value="submit" class="btn_3" (click)="onSubmitLogin()">
                     log in
                   </button>
                   <a class="lost_pass" href="#">forget password?</a>
