--- a/shops/src/app/page-common/component/home/home.component.html
+++ b/shops/src/app/page-common/component/home/home.component.html
@@ -12,7 +12,7 @@
                 <p data-animation="fadeInLeft" data-delay=".7s" data-duration="2000ms">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat is aute irure.</p>
                 <!-- Hero-btn -->
                 <div class="hero__btn" data-animation="fadeInLeft" data-delay=".8s" data-duration="2000ms">
-                  <a href="industries.html" class="btn hero-btn">Shop Now</a>
+                  <a href="home" class="btn hero-btn">Shop Now</a>
                 </div>
               </div>
             </div>
@@ -34,7 +34,7 @@
                 <p data-animation="fadeInLeft" data-delay=".7s" data-duration="2000ms">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat is aute irure.</p>
                 <!-- Hero-btn -->
                 <div class="hero__btn" data-animation="fadeInLeft" data-delay=".8s" data-duration="2000ms">
-                  <a href="industries.html" class="btn hero-btn">Shop Now</a>
+                  <a href="home" class="btn hero-btn">Shop Now</a>
                 </div>
               </div>
             </div>
