--- a/shops/src/app/page-common/component/contact/contact.component.html
+++ b/shops/src/app/page-common/component/contact/contact.component.html
@@ -26,7 +26,7 @@
           <h2 class="contact-title">Get in Touch</h2>
         </div>
         <div class="col-lg-8">
-          <form class="form-contact contact_form" method="post" id="contactForm" novalidate="novalidate">
+          <div class="form-contact contact_form" method="post" id="contactForm" novalidate="novalidate">
             <div class="row">
               <div class="col-12">
                 <div class="form-group">
@@ -52,7 +52,7 @@
             <div class="form-group mt-3">
               <button type="submit" class="button button-contactForm boxed-btn">Send</button>
             </div>
-          </form>
+          </div>
         </div>
         <div class="col-lg-3 offset-lg-1">
           <div class="media contact-info">
